tests/ui/type-alias-impl-trait/wf-check-definition-site.stderr
error[E0477]: the type `&'a u8` does not fulfill the required lifetime
  --> $DIR/wf-check-definition-site.rs:9:22
   |
LL | type OpaqueRet<'a> = impl Sized + 'a;
   |                      ^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/wf-check-definition-site.rs:7:18
   |
LL | struct Static<T: 'static>(T);
   |                  ^^^^^^^

error[E0477]: the type `&'a u8` does not fulfill the required lifetime
  --> $DIR/wf-check-definition-site.rs:15:47
   |
LL | fn test_rpit<'a>(msg: Static<&'static u8>) -> impl Sized + 'a {
   |                                               ^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/wf-check-definition-site.rs:7:18
   |
LL | struct Static<T: 'static>(T);
   |                  ^^^^^^^

error[E0477]: the type `&'a u8` does not fulfill the required lifetime
  --> $DIR/wf-check-definition-site.rs:20:25
   |
LL | type OpaqueAssign<'a> = impl Sized + 'a;
   |                         ^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/wf-check-definition-site.rs:7:18
   |
LL | struct Static<T: 'static>(T);
   |                  ^^^^^^^

error[E0308]: mismatched types
  --> $DIR/wf-check-definition-site.rs:31:41
   |
LL | type OpaqueRef<'a, T: RefAt<'static>> = impl Sized + 'a;
   |                                         ^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected trait `RefAt<'a>`
              found trait `RefAt<'static>`
note: the lifetime `'a` as defined here...
  --> $DIR/wf-check-definition-site.rs:31:16
   |
LL | type OpaqueRef<'a, T: RefAt<'static>> = impl Sized + 'a;
   |                ^^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0477.
For more information about an error, try `rustc --explain E0308`.
